fix small z-index bug

--- a/styles/modal_popup.css
+++ b/styles/modal_popup.css
@@ -1,7 +1,7 @@
 .modal-container {
     display: none; 
     position: fixed; 
-    z-index: 4;
+    z-index: 6;
     width: 100%; 
     height: 100%; 
     overflow: auto;
